🐛 Ensure touch events work on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@ body {
 h1 {
   text-align: center;
   margin-bottom: 0;
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  pointer-events: none;
+  user-select: none;
 }
 
 #canvas {
@@ -35,6 +40,7 @@ h1 {
   position: absolute;
   bottom: 1em;
   left: 50%;
+  width: 100%;
   transform: translateX(-50%);
   z-index: 1;
 }
@@ -44,11 +50,16 @@ button {
   border: 1px solid #fff;
   background: transparent;
   color: #fff;
-  font-size: 1rem;
   cursor: pointer;
-  min-height: 2.25rem;
-  font-size: 0.9em;
+  font-size: 0.8em;
   border-radius: 100vmax;
+  display: block;
+}
+
+.color-select {
+  width: 2.25em;
+  height: 2.25em;
+  padding: 0;
 }
 
 input[type="range"] {
